Update 02. 240611 회의록01_DB 구성안.md

--- a/회의록/02. 240611 회의록01_DB 구성안.md
+++ b/회의록/02. 240611 회의록01_DB 구성안.md
@@ -42,7 +42,7 @@ D {기본값}: Defualt attribute
 09. 별점 : D {0}
 ```
 
-### 🔖 태그 게시판(게시판/여행지 연결다리
+### 🔖 태그 게시판
 - **⚠️ 추가 논의 필요**
 - 게시판 DB, 여행지 DB의 연결다리 역할
 - 변수 목록
